Fix to be visible LangBtn

--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ body {
     .langBtn {
         position: fixed;
         right: 80px;
-        z-index: 1;
+        z-index: 2;
     }
     .column {
         width: 100%;
