--- a/src/Components/Products/Item.module.css
+++ b/src/Components/Products/Item.module.css
@@ -11,7 +11,7 @@
     width: 33%;
     margin-bottom: 16px;
     padding: 0 8px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
   }
 
   .image{
