--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -115,9 +115,9 @@ article.nextSlide {
     display: none;
 }
 
-.ordnenList {
+/* .ordnenList {
     
-}
+} */
 
 .teamStyle:first-child { 
     display: none;
